fix-overlapping-images

--- a/src/main/resources/static/global.css
+++ b/src/main/resources/static/global.css
@@ -32,14 +32,13 @@
 
 #altcoin {
 	display: block;
-	float: right;
-	width: 50%;
+	float: left;
 }
 
 #bitcoin {
 	display: block;
 	float: left;
-	width: 50%;
+	width: 40%;
 }
 
 #bottom img:hover {
